# mapreduce-chi-square-calc

./: .gitignore  ChiSquaredMapReduce.ipynb  README.md  chiSquaredReduce.py  chiSquaredReduceOptimized.py  output.txt  pyproject.toml  runner.py
data/: sub_reviews_devset.json
output/: output.txt
result/: output.txt
src/: ChiSquared_local.py  ChiSquared_server.py  chiSquaredReduce.py  chi_squared.py  ex1_old.py  parse_json.py  pre_processer.py  run.sh  runner.py  subtask.py  top_k.py
