[tool.poetry]
name = "chi-squared-on-map-reduce"
version = "0.1.0"
description = ""
authors = ["tobiasgrantner <tobias.grantner@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
